# main.go
@@ -19,26 +19,29 @@ func main() {
 
 	router := mux.NewRouter()
 
+	// Auth routes
 	router.HandleFunc("/regis", auth.Registration).Methods("POST")
 	router.HandleFunc("/login", auth.Login).Methods("POST")
 
-	//Router handler mahasiswa
+	// Kelas routes
+	router.HandleFunc("/kelas", kelas.GetKelas).Methods("GET")
+	router.HandleFunc("/kelas/{id}", kelas.GetKelasByID).Methods("GET")
+	router.HandleFunc("/kelas", kelas.PostKelas).Methods("POST")
+	router.HandleFunc("/kelas/{id}", auth.JWTAuth(kelas.PutKelas)).Methods("PUT")
+	router.HandleFunc("/kelas/{id}", auth.JWTAuth(kelas.DeleteKelas)).Methods("DELETE")
+
+	// Mahasiswa routes
 	router.HandleFunc("/mahasiswa", mahasiswa.GetMahasiswa).Methods("GET")
+	router.HandleFunc("/mahasiswa/{id}", mahasiswa.GetMahasiswaByID).Methods("GET")
 	router.HandleFunc("/mahasiswa", auth.JWTAuth(mahasiswa.PostMahasiswa)).Methods("POST")
 	router.HandleFunc("/mahasiswa/{id}", auth.JWTAuth(mahasiswa.PutMahasiswa)).Methods("PUT")
 	router.HandleFunc("/mahasiswa/{id}", auth.JWTAuth(mahasiswa.DeleteMahasiswa)).Methods("DELETE")
-
-	//Router handler Album
-	router.HandleFunc("/kelas", kelas.GetKelas).Methods("GET")
-	router.HandleFunc("/kelas", auth.JWTAuth(kelas.PostKelas)).Methods("POST")
-	router.HandleFunc("/kelas/{id}", auth.JWTAuth(kelas.PutKelas)).Methods("PUT")
-	router.HandleFunc("/kelas/{id}", auth.JWTAuth(kelas.DeleteKelas)).Methods("DELETE")
 
 	c := cors.New(cors.Options{
 		AllowedOrigins: []string{"*"},
 		AllowedMethods: []string{"GET", "POST", "PUT", "DELETE"},
 		AllowedHeaders: []string{"Content-Type", "Authorization"},
-		Debug: true,
+		Debug:          true,
 	})
 
 	handler := c.Handler(router)
